--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,8 @@
   --color-primary: var(--primary);
   --color-primary-foreground: var(--primary-foreground);
   --color-secondary: var(--secondary);
+  --color-outline: var(--outline);
+  --color-outline-foreground: var(--outline-foreground);
   --color-secondary-foreground: var(--secondary-foreground);
   --color-muted: var(--muted);
   --color-muted-foreground: var(--muted-foreground);
@@ -55,6 +57,8 @@
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.3703 0.0119 285.81);
   --secondary-foreground: oklch(0.985 0 0);
+  --outline: oklch(0.3309 0.0119 285.81);
+  --outline-foreground: oklch(0.985 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
   --accent: oklch(0.97 0 0);
@@ -89,6 +93,8 @@
   --primary-foreground: oklch(0.205 0 0);
   --secondary: oklch(0.3703 0.0119 285.81);
   --secondary-foreground: oklch(0.105 0 0);
+  --outline: oklch(0.2103 0.0059 285.89);
+  --outline-foreground: oklch(0.7137 0.0192 261.32);
   --muted: oklch(0.269 0 0);
   --muted-foreground: oklch(0.708 0 0);
   --accent: oklch(0.269 0 0);
